--- a/src/client/demo4.html
+++ b/src/client/demo4.html
@@ -1,7 +1,18 @@
-<!doctype html><html><head><title>StatsVR - Demo 4</title><meta name="author" content="Sean Bradley"><style>body {
+﻿<!DOCTYPE html>
+<html>
+
+<head>
+	<title>StatsVR - Demo 4</title>
+	<meta name="author" content="Sean Bradley">
+	<style>
+		body {
 			overflow: hidden;
 			margin: 0px;
-		}</style><script id="fragmentShader" type="x-shader/x-fragment">varying vec2 vUv;
+		}
+	</style>
+	<script id="fragmentShader" type="x-shader/x-fragment">
+
+		varying vec2 vUv;
         varying float noise;
         uniform sampler2D tExplosion;
 
@@ -14,7 +25,12 @@
             vec2 tPos = vec2( 0, 1.3 * noise + r );
             vec4 color = texture2D( tExplosion, tPos );
             gl_FragColor = vec4( color.rgb, 0.5 );
-		}</script><script id="vertexShader" type="x-shader/x-vertex">//
+		}
+		
+	</script>
+
+	<script id="vertexShader" type="x-shader/x-vertex">
+        //
         // GLSL textureless classic 3D noise "cnoise",
         // with an RSL-style periodic variant "pnoise".
         // Author:  Stefan Gustavson (stefan.gustavson@liu.se)
@@ -219,4 +235,12 @@
         vec3 newPosition = position + normal * displacement;
         gl_Position = projectionMatrix * modelViewMatrix * vec4( newPosition, 1.0 );
 
-        }</script><script defer="defer" src="demo4.bundle.js"></script></head><body></body></html>
+        }
+
+	</script>
+</head>
+
+<body>
+</body>
+
+</html>
