--- a/src/client/demo1.html
+++ b/src/client/demo1.html
@@ -1,18 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
+    <head>
+        <title>StatsVR - Demo 1</title>
+        <meta name="author" content="Sean Bradley" />
+        <style>
+            body {
+                overflow: hidden;
+                margin: 0px;
+            }
+        </style>
+    </head>
 
-<head>
-	<title>StatsVR - Demo 1</title>
-	<meta name="author" content="Sean Bradley">
-	<style>
-		body {
-			overflow: hidden;
-			margin: 0px;
-		}
-	</style>
-</head>
-
-<body>
-</body>
-
+    <body></body>
 </html>
